p2/confs/app_three.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: app-three
    labels:
        app: app-three
spec:
    replicas: 1
    selector:
        matchLabels:
            app: app-three
    template:
        metadata:
            labels:
                app: app-three
        spec:
            containers:
                - name: apache
                  image: httpd
                  ports:
                      - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
    name: app-three
spec:
    selector:
        app: app-three
    ports:
        - protocol: "TCP"
          port: 80
          targetPort: 80
