p2/confs/app_two.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: app-two
    labels:
        app: app-two
spec:
    replicas: 3
    selector:
        matchLabels:
            app: app-two
    template:
        metadata:
            labels:
                app: app-two
        spec:
            containers:
                - name: tomcat
                  image: tomcat
                  ports:
                      - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
    name: app-two
spec:
    selector:
        app: app-two
    ports:
        - protocol: "TCP"
          port: 80
          targetPort: 8080
